...
                )
            }

            if(!UIinitiated)
            {
                // Default data fetch
                gData("Minsk", this, dayl, cday)
                UIinitiated = true;
            }

            SuperWeatherTheme {
                Image(
                    painter = painterResource(id = R.drawable.skyy),
...
